--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
 
           <div class="page-acc">
             <div class="page-acc-img">
-              <img src="/assets/page.jpeg" alt="page" />
+              <img src="/assets/pageniita.jpeg" alt="page" />
             </div>
 
             <p>NIITA</p>
